--- a/Accueil.html
+++ b/Accueil.html
@@ -30,7 +30,6 @@
 			<ul class="navbar-nav">
 				<li class="nav-item"><a class="nav-link" href="Accueil.html">Accueil</a></li>
 				<li class="nav-item"><a class="nav-link" href="Parcourir.html">Parcourir</a></li>
-				<li class="nav-item"><a class="nav-link" href="Notifications.html">Notifications</a></li>
 				<li class="nav-item"><a class="nav-link" href="Compte.html">Mon compte</a></li>
 				<li class="nav-item"><a class="nav-link" href="Panier.html"><img src="panier.jpg" alt="Panier" width="30 px"></a></li>
 			</ul>
@@ -49,12 +48,7 @@
      	<h1>Bienvenue sur GreenMarket !</h1>
      	<p> GreenMarket est un site pour le magasinage en ligne pour la communauté ECE Paris. Ce site vous permet d'acheter des articles en vente sur le site.<br>
 			<br>
-			GreenMarket est ouvert à tous les membres de la communauté ECE Paris. Si vous avez un compte vendeur sur le site, vous pouvez mettre des articles en vente sur le site. 				Chaque article peut être vendu de différente manière :
-			<ul> 
-				<li> par vente immédiate (pas de négociation, l'article est acheté au prix indiqué) </li>
-				<li> par négociation (il y a une discussion entre le vendeur et le client pour négocier électroniquement) </li>
-				<li> par meilleure offre (aux enchères) </li>
-			</ul>
+			GreenMarket est ouvert à tous les membres de la communauté ECE Paris. 
 			</p> 
 		<button class="btn btn-outline-secondary btn-lg"><a class="nav-link" href="Compte.html">Connexion</a></button>
      </div>
@@ -79,7 +73,7 @@
 			<p>
 			</div>
 		</div>
-		<div class="footer-copyright text-center">&copy; 2021 Copyright | Droit d'auteur
+		<div class="footer-copyright text-center">&copy; 2022 Copyright | Droit d'auteur
 		</div>
 	</footer>
 </body>
